fixes site on mobile browsers

--- a/style.css
+++ b/style.css
@@ -21,12 +21,18 @@
 
             #textBody {     
                 text-align: center;
-                width: 550px;
+                width: 600px;
                 margin: auto;           
                 flex: 1;
                 display: flex;
                 flex-direction: column;                  
                 justify-content: center;
+            }
+
+            @media screen and (max-width:768px) {
+                #textBody {
+                    width: 90%; 
+                }
             }
 
             #content {
@@ -82,6 +88,7 @@
                 font-size: 1.5em;
                 font-weight: bold;
                 text-align: center;
+                min-width: 0px;
             }
 
             #generatorBlock input[type="button"] {
@@ -120,4 +127,6 @@
                 margin: 20px auto 10px auto;
                 font-weight: 0.5em;
                 color: #9c9c9c;
+                overflow-wrap: break-word;
+                max-width: 100%;
             }
